# moving

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  flake.nix  label_printer.py  pyproject.toml
labels/: main.tex
moving/: __init__.py  auth.py  constants.py  db.py  labels.py  observability.py  static.py
moving/templates/: add.html.jinja2  base.html.jinja2  box.html.jinja2  boxes.html.jinja2  delete.html.jinja2  deleted.html.jinja2  index.html.jinja2  reprinted.html.jinja2  submitted.html.jinja2
static/: index.html  submitted.html.jinja2
